added validation date to job
