# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/consumer": {
+        "/consumer/start": {
             "post": {
                 "description": "Publishes a job message to RabbitMQ with connection parameters",
                 "consumes": [
@@ -27,28 +27,28 @@
                         "type": "string",
                         "description": "RabbitMQ host",
                         "name": "host",
-                        "in": "query",
+                        "in": "header",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "RabbitMQ port",
                         "name": "port",
-                        "in": "query",
+                        "in": "header",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "RabbitMQ user",
                         "name": "user",
-                        "in": "query",
+                        "in": "header",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "RabbitMQ password",
                         "name": "password",
-                        "in": "query",
+                        "in": "header",
                         "required": true
                     },
                     {
@@ -57,23 +57,16 @@
                         "name": "queue",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "description": "Job object to publish",
-                        "name": "job",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.Job"
-                        }
                     }
                 ],
                 "responses": {
                     "201": {
-                        "description": "Publish success response",
+                        "description": "Consumer success",
                         "schema": {
                             "type": "object",
-                            "additionalProperties": true
+                            "additionalProperties": {
+                                "type": "string"
+                            }
                         }
                     },
                     "400": {
